@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-07-14
+ * Added wing.scroll_to() in wing.vue.js.
+
 2018-07-11
  * wing.vue.js throws errors when apis are empty.
 
